Fixing h1 on mobile

--- a/project_tier/static/css/_home.scss
+++ b/project_tier/static/css/_home.scss
@@ -57,7 +57,11 @@
         h1 {
             @extend %display-heading;
             text-transform: none;
-            font-size: 3rem;
+            font-size: 2rem;
+            line-height: 1.2;
+            @include breakpoint(medium up){
+                font-size: 3rem;
+            }
         }
         #intro-text {
             p {
